syntax = "proto3";
option java_multiple_files = true;
import "google/protobuf/timestamp.proto";

package via.dk;

message RetrieveSubscriptionRequest {
  int32 registration_id = 1;
}

message RetrieveSubscriptionResponse {
  int32 id = 1;
  int32 registration_id = 2;
  google.protobuf.Timestamp creation_date = 3;
  google.protobuf.Timestamp cancel_date = 4;
}

message CreateSubscriptionRequest {
  int32 registration_id = 1;
}

message CreateSubscriptionResponse {
  string status = 1;
}

message CancelSubscriptionRequest {
  int32 id = 1;
}

message CancelSubscriptionResponse {
  string status = 1;
}

service SubscriptionService {
  rpc CreateSubscription(CreateSubscriptionRequest) returns (CreateSubscriptionResponse);
  rpc CancelSubscription(CancelSubscriptionRequest) returns (CancelSubscriptionResponse);
  rpc RetrieveSubscription(RetrieveSubscriptionRequest) returns (RetrieveSubscriptionResponse);
}